[package]
name = "payment-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
tera = "1"
rusqlite = { version = "0.26.0", features = ["bundled"]}
r2d2 = "0.8.9"
r2d2_sqlite = "0.19.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]
